2004-01-26  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DefaultWatcher.cs: check if the FileSystemWatcher is in WaitForChange
	and call Monitor.PulseAll in that case.

2004-01-21  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DefaultWatcher.cs: implemented.
	* FAMWatcher.cs: don't stop the thread when we add a new watch.
	* FileSystemWatcher.cs: on windows we use the default watcher by now.

2004-01-16  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* DefaultWatcher.cs: stub for the default watcher.
	* WindowsWatcher.cs: stub for the windows watcher.
	
	* FAMWatcher.cs: FAM watcher.
	
	* FileAction.cs: enum with event types.
	
	* FileSystemEventArgs.cs: added SetName property.
	* FileSystemWatcher.cs: added support for the 3 watchers.

	* IFileWatcher.cs: interface implemented by the watchers. 
	* SearchPattern.cs: copied from corlib.

2003-07-17  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* FileSystemWatcher.cs: Reworked attributes based on the new Consts
	scheme

2003-07-13  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* FileSystemWatcher.cs: Added missing attributes

2003-07-09  Andreas Nahr <ClassDevelopment@A-SoftTech.com>

	* IODescriptionAttribute.cs: Removed unneeded field

2003-05-16  Dick Porter  <dick@ximian.com>

	* MonoIO.cs: Implement GetTempPath

2003-03-17  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* FileSystemWatcher.cs: added attributes and some more implementation.
	Now only the guts left to do.

	* FileSystemEventArgs.cs:
	* RenamedEventArgs.cs: implemented a couple of properties.

2002-10-31  Dick Porter  <dick@ximian.com>

	* MonoIO.cs: Return the error status in a parameter, as the
	GetLastError() value has long since been blown away if we try and
	look it up in a subsequent internal call invocation.

2002-09-15  Duncan Mak  <duncan@ximian.com>

	* FileSystemWatcher.cs (FileSystemWatcher): Fixed the null-param
	constructor.

2002-08-28  Gonzalo Paniagua Javier <gonzalo@ximian.com>
